--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/index.css" rel="stylesheet">
 
   <script src="js/index.js" async></script>
+  
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -86,5 +87,7 @@
     <p>Copyright Fun Bus 2018</p>
   </footer>
 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
 </body>
 </html>
